--- a/sand-timer/platformio.ini
+++ b/sand-timer/platformio.ini
@@ -12,18 +12,17 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+build_type = debug
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder 
 lib_deps = 
 	https://github.com/pixelmatix/SmartMatrix
-	; https://github.com/mrfaptastic/ESP32-HUB75-MatrixPanel-DMA
-	; ; https://github.com/mrfaptastic/GFX_Root 
-	; adafruit/Adafruit GFX Library
-	; ayushsharma82/AsyncElegantOTA@^2.2.7
-	; me-no-dev/AsyncTCP@^1.1.1
-	; https://github.com/me-no-dev/ESPAsyncWebServer.git
-	; https://github.com/tzapu/WiFiManager
-	; fastled/FastLED@^3.5.0
-	; https://github.com/kvoit/RemoteDebug
+	ayushsharma82/AsyncElegantOTA
+	me-no-dev/AsyncTCP
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	https://github.com/tzapu/WiFiManager
+	https://github.com/kvoit/RemoteDebug
+	
 ; build_flags =
 ; 	-DUSE_GFX_ROOT=1
 ; 	-DFASTLED_CRGB_SUPPORT=1
