--- a/sand-timer/platformio.ini
+++ b/sand-timer/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 build_type = debug
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder 
+; extra_scripts = pre:patch.py smartmatrix.patch
 lib_deps = 
 	https://github.com/pixelmatix/SmartMatrix
 	ayushsharma82/AsyncElegantOTA
